--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-venv
+
 services
 green_tripdata_2024-01.parquet
 for_hire_records_2024-01.parquet
 yellow_tripdata_2024-01.parquet
 taxi_zone_lookup.csv
 output.parquet
+ny_taxi_postgres_data
